[package]
name = "transcend"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
transcend_macros = { version = "0.1.0", optional = true, path = "../transcend_macros" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_SystemInformation",
  "Win32_System_Memory",
] }

[target.'cfg(linux)'.dependencies]
libc = "0.2.155"

[features]
macros = ["dep:transcend_macros"]
